# HACTAP-Framework

./: .coverage  .coveragerc  .gitignore  .pylintrc  .travis.yml  README.md  batch_experiment.py  batch_experiments_for_deim2020.sh  batch_experiments_hcomp2020.sh  batch_experiments_test.sh  experiment.py  pyproject.toml  requirements.txt  requirements.txt.bk  setup.py
.github/workflows/: python-app.yml
experiment/mind/: .gitignore  README.md  dataset.py  experiment.py  mind_ai_worker.py  playground_mind_aiw.py  prepare_dataset.py
experiment/mnist/: batch_experiments.txt  experiment.py
experiments/demo_mnist/: .gitignore  README.md  experiment.py
experiments/experiment_additional_assignment/: experiment.py
experiments/interactive_assignments/: .gitignore  experiment.py
experiments/mind/: .gitignore  README.md  experiment.py  mind_ai_worker.py  playground_ai_worker.py  playground_mind_aiw.py  requirements.txt
experiments/performance_testing/: README.md  ala.py  cta.py  gta.py  gta_limit.py
hactap/: __init__.py  ai_worker.py  dataset.py  evaluate_ai_worker.py  human_crowd.py  intersectional_model.py  logging.py  reporter.py  solver.py  task_cluster.py  tasks.py  utils.py  workflow_algorithm.py
hactap/solvers/: __init__.py  al.py  ala.py  baseline.py  cta.py  cta_additional_assignment.py  (+13 more)
tests/: README.md  pyproject.toml  requirements.txt  test_ai_worker.py  test_dataset.py  test_solver.py  test_task_cluster.py  test_tasks.py  test_utils.py  testutils.py
tests/solvers/: test_ala.py  test_baseline.py  test_cta.py  test_gta.py  test_interactive_cta.py
