[tool.poetry]
name = "hactap-framework"
version = "0.1.0"
description = ""
authors = ["notchman <s2113591@klis.tsukuba.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.11"
modAL-python = "^0.4.1"
numpy = "^1.22.4"
scikit-learn = "^1.3"
scipy = "^1.7"
skorch = "^0.11.0"
torch = "^2.0.0"
torchvision = "^0.15.0"
colorlog = "^6.6.0"
flake8 = "^4.0.1"
mypy = "^0.960"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
