[tool.poetry]
name = "tests"
version = "0.1.0"
description = "unit test for HACTAP-Framework"
authors = ["23akei <s1911475@klis.tsukuba.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
colorlog = "^6.7.0"
modal-python = "^0.4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
